Fix alignment of buttons in error state.

--- a/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_editor/components/processor_form/field_components/drag_and_drop_text_list.scss
+++ b/x-pack/plugins/ingest_pipelines/public/application/components/pipeline_editor/components/processor_form/field_components/drag_and_drop_text_list.scss
@@ -4,10 +4,6 @@
     padding: $euiSizeM;
   }
 
-  &__grabIcon {
-    margin-right: $euiSizeS;
-  }
-
   &__removeButton {
     margin-left: $euiSizeS;
   }
@@ -21,4 +17,12 @@
   &__labelContainer {
     margin-bottom: $euiSizeXS;
   }
+}
+
+.pipelineProcessorsEditor__form__dragAndDropList__grabIcon {
+  height: $euiSizeXL;
+  width: $euiSizeXL;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
